--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
     <span class="close-btn" onclick="closeFullscreenImage()">&times;</span>
     <div class="img-container">
       <div class="img-wrapper">
-        <img src="img/acc.PNG" alt="Accesorio 1">
+        <img src="img/Nuevo 1.jpg" alt="Accesorio 1">
       </div>
       <div class="img-wrapper">
-        <img src="img/acc%202.PNG" alt="Accesorio 2">
+        <img src="img/Nuevo 2.jpg" alt="Accesorio 2">
       </div>
     </div>
   </div>
