--- a/index.html
+++ b/index.html
@@ -5,54 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Electro Fix It - Reparación y Venta de Móviles</title>
   <style>
-    /* Fuente moderna con estilo metálico */
+    /* Importa la fuente Orbitron */
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
 
-    /* Fondo de la página */
-    body {
-      font-family: 'Orbitron', sans-serif;
+    /* Estilos base */
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+    html {
+      scroll-behavior: smooth;
+    }
+    body {
+      font-family: 'Orbitron', sans-serif;
       background: url('https://wallpapers.com/images/high/hd-engineering-colorful-computer-circuit-board-0bgyx90tzqx86vss.webp') no-repeat center center fixed;
       background-size: cover;
       color: #e5e5e5;
       line-height: 1.6;
     }
 
-    /* Encabezado */
+    /* Header */
     header {
-      background: rgba(0, 0, 0, 0.8);
-      color: #FFD700;
+      background: rgba(0, 0, 0, 0.85);
+      padding: 40px 20px;
       text-align: center;
-      padding: 30px 20px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
       text-transform: uppercase;
     }
     header img {
       width: 300px;
       height: auto;
-      display: block;
       margin: 0 auto 20px;
     }
     header p {
       font-size: 1.2rem;
       margin: 10px 0;
-      line-height: 1.8;
     }
 
-    /* Navegación */
+    /* Navegación sticky */
     nav {
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      background: rgba(0, 0, 0, 0.9);
+      padding: 10px 0;
       text-align: center;
-      margin: 20px 0;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.3);
     }
     nav a {
+      display: inline-block;
+      margin: 0 15px;
+      padding: 10px 20px;
+      font-size: 1.1rem;
+      font-weight: bold;
       text-decoration: none;
       color: #FFD700;
       background: rgba(0, 0, 0, 0.6);
-      padding: 10px 20px;
-      margin: 0 10px;
-      font-size: 1.1rem;
-      font-weight: bold;
       border-radius: 5px;
       transition: background 0.3s, color 0.3s;
     }
@@ -61,59 +70,57 @@
       color: #000;
     }
 
-    /* Secciones */
-    section {
+    /* Main content */
+    main {
       padding: 20px;
       max-width: 1000px;
-      margin: 0 auto;
+      margin: 20px auto;
+    }
+    section {
       background: rgba(0, 0, 0, 0.85);
-      color: #e5e5e5;
+      padding: 30px;
+      margin-bottom: 30px;
       border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      transition: transform 0.3s;
     }
-    .services, .products, .accessories {
-      margin: 20px 0;
-      transition: transform 0.2s ease-in-out;
-    }
-    .services:hover, .products:hover, .accessories:hover {
+    section:hover {
       transform: scale(1.02);
     }
-
-    /* Encabezados de sección */
     h2 {
       color: #FFD700;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
-      border-bottom: 2px solid #FFD700;
-      display: inline-block;
+      margin-bottom: 15px;
       padding-bottom: 5px;
+      border-bottom: 2px solid #FFD700;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
     }
-
-    /* Botones */
+    p {
+      margin-bottom: 15px;
+      font-size: 1rem;
+    }
     .btn {
       display: inline-block;
-      background-color: #FFD700;
+      background: #FFD700;
       color: #000;
       padding: 10px 20px;
       border-radius: 5px;
       text-decoration: none;
-      margin-top: 10px;
       font-weight: bold;
-      transition: background-color 0.3s ease-in-out, transform 0.2s;
+      transition: background 0.3s, transform 0.3s;
     }
     .btn:hover {
-      background-color: #FFFFFF;
-      color: #000;
+      background: #fff;
       transform: scale(1.05);
     }
 
-    /* Pie de página */
+    /* Footer */
     footer {
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0, 0, 0, 0.85);
       color: #FFD700;
       text-align: center;
       padding: 20px 10px;
-      margin-top: 30px;
       font-size: 0.9rem;
+      margin-top: 30px;
     }
     footer a {
       color: #FFD700;
@@ -122,10 +129,16 @@
       transition: color 0.3s;
     }
     footer a:hover {
-      color: #FFFFFF;
+      color: #fff;
+    }
+    footer img {
+      vertical-align: middle;
+      width: 20px;
+      height: 20px;
+      margin-right: 10px;
     }
 
-    /* Ventana de imagen a pantalla completa */
+    /* Modal / Fullscreen Image Viewer */
     .fullscreen-img {
       display: none;
       position: fixed;
@@ -133,13 +146,16 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.9);
+      background: rgba(0,0,0,0.95);
       z-index: 1000;
-      overflow: auto;
-      justify-content: center;
-      align-items: center;
+      overflow-y: auto;
+      padding: 40px 20px;
       text-align: center;
-      padding: 0;
+      animation: fadeIn 0.5s;
+    }
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
     }
     .fullscreen-img .close-btn {
       position: absolute;
@@ -147,32 +163,22 @@
       right: 20px;
       color: #FFD700;
       font-size: 30px;
-      font-weight: bold;
       cursor: pointer;
     }
-    .fullscreen-img .img-container {
+    .img-container {
       display: flex;
       justify-content: center;
       align-items: center;
       gap: 20px;
       flex-wrap: wrap;
-      width: 100%;
-      padding: 20px;
-      box-sizing: border-box;
+      margin-top: 60px;
     }
-    /* Contenedor de cada imagen con scroll activado y recorte superior */
-    .img-wrapper {
+    .img-container img {
       max-width: 45%;
-      max-height: calc(100vh - 40px);
-      overflow: auto;
-      padding-top: 10%; /* este padding añade espacio en la parte superior para permitir el scroll */
-      box-sizing: border-box;
-    }
-    .img-wrapper img {
-      width: 100%;
-      height: auto;
-      margin-top: -10%; /* recorta un 10% de la parte superior */
-      display: block;
+      max-height: calc(100vh - 80px);
+      object-fit: contain;
+      border: 5px solid #FFD700;
+      border-radius: 10px;
     }
 
     /* Responsividad */
@@ -184,13 +190,13 @@
         font-size: 1rem;
       }
       nav a {
-        display: inline-block;
         margin: 5px;
-        font-size: 1rem;
         padding: 8px 15px;
+        font-size: 1rem;
       }
-      .img-wrapper {
+      .img-container img {
         max-width: 90%;
+        max-height: calc(100vh - 80px);
       }
     }
   </style>
@@ -198,11 +204,8 @@
 <body>
   <header>
     <img src="img/Photoroom_20250126_215254.PNG" alt="Logo de Electro Fix It">
-    <p>👨‍🔧 Servicio técnico transparente/personalizado</p>
-    <p>🤝 +500 clientes satisfechos</p>
-    <p>🏆 Calidad que impulsa tu confianza</p>
-    <p>🚛 Servicio a domicilio</p>
-    <p>📍 Tenerife</p>
+    <p>Servicio técnico transparente y personalizado - ¡+500 clientes satisfechos!</p>
+    <p>Calidad que impulsa tu confianza - Servicio a domicilio en Tenerife</p>
   </header>
 
   <nav>
@@ -211,48 +214,46 @@
     <a href="#accessories">Accesorios</a>
   </nav>
 
-  <section id="services" class="services">
-    <h2>Servicios</h2>
-    <p>Reparación de pantallas, baterías, cámaras y más. Garantizamos calidad y rapidez en cada servicio.</p>
-    <a href="https://wa.me/34642886426" target="_blank" class="btn">Contáctanos</a>
-  </section>
+  <main>
+    <section id="services" class="services">
+      <h2>Servicios</h2>
+      <p>Reparación de pantallas, baterías, cámaras y más. Nuestro equipo de expertos garantiza calidad y rapidez en cada servicio.</p>
+      <a href="https://wa.me/34642886426" target="_blank" class="btn">Contáctanos</a>
+    </section>
 
-  <section id="products" class="products">
-    <h2>Móviles en Venta</h2>
-    <p>Descubre nuestra selección de móviles restaurados y nuevos. Los mejores precios del mercado.</p>
-    <a href="https://www.facebook.com/marketplace/profile/61565708769230/" target="_blank" class="btn">Ver Catálogo</a>
-  </section>
+    <section id="products" class="products">
+      <h2>Móviles en Venta</h2>
+      <p>Descubre nuestra selección de móviles restaurados y nuevos. Encuentra los mejores precios del mercado y productos certificados.</p>
+      <a href="https://www.facebook.com/marketplace/profile/61565708769230/" target="_blank" class="btn">Ver Catálogo</a>
+    </section>
 
-  <section id="accessories" class="accessories">
-    <h2>Accesorios</h2>
-    <p>Accesorios para móviles: cargadores, carcasas, protectores de pantalla y más.</p>
-    <a href="#" class="btn" onclick="showFullscreenImage()">Explorar Accesorios</a>
-  </section>
+    <section id="accessories" class="accessories">
+      <h2>Accesorios</h2>
+      <p>Explora nuestra gama de accesorios para móviles: cargadores, carcasas, protectores de pantalla y mucho más.</p>
+      <a href="#" class="btn" onclick="showFullscreenImage()">Explorar Accesorios</a>
+    </section>
+  </main>
 
   <footer>
     <p>
-      <img src="img/Instagram_logo_2022.svg.webp" alt="Logo Instagram" style="vertical-align: middle; width: 20px; height: 20px; margin-right: 10px;">
-      Síguenos en Instagram:
-      <a href="https://www.instagram.com/electro_fix_it/" target="_blank">@electro_fix_it</a>
+      <img src="img/Instagram_logo_2022.svg.webp" alt="Logo Instagram">
+      Síguenos en Instagram: <a href="https://www.instagram.com/electro_fix_it/" target="_blank">@electro_fix_it</a>
     </p>
     <p>© 2024 Electro Fix It. Todos los derechos reservados.</p>
   </footer>
 
+  <!-- Ventana modal para mostrar imágenes de accesorios -->
   <div class="fullscreen-img" id="fullscreenImg">
     <span class="close-btn" onclick="closeFullscreenImage()">&times;</span>
     <div class="img-container">
-      <div class="img-wrapper">
-        <img src="img/Nuevo 1.jpg" alt="Accesorio 1">
-      </div>
-      <div class="img-wrapper">
-        <img src="img/Nuevo 2.jpg" alt="Accesorio 2">
-      </div>
+      <img src="img/Nuevo 1.jpg" alt="Accesorio 1">
+      <img src="img/Nuevo 2.jpg" alt="Accesorio 2">
     </div>
   </div>
 
   <script>
     function showFullscreenImage() {
-      document.getElementById('fullscreenImg').style.display = 'flex';
+      document.getElementById('fullscreenImg').style.display = 'block';
     }
     function closeFullscreenImage() {
       document.getElementById('fullscreenImg').style.display = 'none';
